--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@types/react": "~19.0.10",
     "axios": "^1.10.0",
     "expo": "53.0.16",
+    "expo-image-picker": "~16.1.4",
     "react": "^19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-maps": "^1.20.1",
+    "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
@@ -24,7 +26,6 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
-    "typescript": "~5.8.3",
-    "expo-image-picker": "~16.1.4"
+    "typescript": "~5.8.3"
   }
 }
