Initialize StripeProvider in App.js and set up payment integration

--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "Trevi",
     "slug": "trevi",
     "version": "1.0.0",
-    "scheme": "treviapp",
+    "scheme": "trevi",
     "orientation": "portrait",
     "userInterfaceStyle": "light",
     "icon": "./src/Assets/Images/icon.png",
