--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "@stripe/stripe-react-native": "0.45.0",
-    "@types/react": "~19.0.10",
+    "@types/react": "~18.2.0",
     "axios": "^1.10.0",
-    "expo": "53.0.16",
+    "expo": "50.0.0",
     "expo-image-picker": "~16.1.4",
-    "expo-splash-screen": "~0.30.10",
-    "react": "^19.0.0",
-    "react-native": "0.79.5",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-maps": "^1.20.1",
+    "expo-splash-screen": "~0.26.2",
+    "react": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-maps": "1.17.1",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
+    "react-native-screens": "4.11.1",
     "react-native-svg": "^15.11.2",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "typescript": "~5.8.3",
-    "expo-font": "~13.3.2",
+    "expo-font": "~13.2.1",
     "expo-dev-client": "~5.2.4"
   },
   "name": "trevi-frontend",
