--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react": "~18.2.0",
     "axios": "^1.10.0",
     "expo": "50.0.0",
+    "expo-dev-client": "~5.2.4",
+    "expo-font": "~13.2.1",
     "expo-image-picker": "~16.1.4",
     "expo-splash-screen": "~0.26.2",
     "react": "18.2.0",
@@ -26,14 +28,15 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
-    "typescript": "~5.8.3",
-    "expo-font": "~13.2.1",
-    "expo-dev-client": "~5.2.4"
+    "typescript": "~5.8.3"
   },
   "name": "trevi-frontend",
   "version": "1.0.0",
   "scripts": {
     "android": "expo run:android",
     "ios": "expo run:ios"
+  },
+  "devDependencies": {
+    "expo-modules-autolinking": "^2.1.14"
   }
 }
